--- a/index.html
+++ b/index.html
@@ -4,12 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Stanley Mwange | Data Analyst & Machine Learning Engineer</title>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    <!-- Shiny Golden Particles Background -->
+    <div class="particles"></div>
+
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">Stanley Mwange</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -37,8 +41,8 @@
     <!-- Hero Section -->
     <header class="hero-section text-center">
         <div class="container">
-            <h1 class="display-4">Hello, I'm Stanley Mwange</h1>
-            <p class="lead">Data Analyst | Machine Learning Engineer | Data Scientist</p>
+            <h1 class="display-4 fade-in">Hello, I'm Stanley Mwange</h1>
+            <p class="lead fade-in">Data Analyst | Machine Learning Engineer | Data Scientist</p>
         </div>
     </header>
 
@@ -47,7 +51,7 @@
         <div class="container text-center">
             <h2>About Me</h2>
             <p>I am a passionate Data Analyst, Machine Learning Engineer, and Data Scientist with experience in extracting insights from data, building machine learning models, and developing predictive analytics solutions.</p>
-            <img src="Images\welcome_section.jpg" alt="Stanley Mwange" class="rounded-circle" width="200">
+            <img src="Imagese.jpg" alt="Stanley Mwange" class="rounded-circle profile-img fade-in">
         </div>
     </section>
 
@@ -57,28 +61,34 @@
             <h2>Skills</h2>
             <div class="row">
                 <div class="col-md-4">
-                    <h3>Data Analysis</h3>
-                    <p>Pandas, NumPy, SQL, Excel, Power BI, Tableau</p>
+                    <div class="skill-card slide-up">
+                        <h3>Data Analysis</h3>
+                        <p>Pandas, NumPy, SQL, Excel, Power BI, Tableau</p>
+                    </div>
                 </div>
                 <div class="col-md-4">
-                    <h3>Machine Learning</h3>
-                    <p>Scikit-learn, TensorFlow, PyTorch, Keras, XGBoost</p>
+                    <div class="skill-card slide-up">
+                        <h3>Machine Learning</h3>
+                        <p>Scikit-learn, TensorFlow, PyTorch, Keras, XGBoost</p>
+                    </div>
                 </div>
                 <div class="col-md-4">
-                    <h3>Programming</h3>
-                    <p>Python, R, SQL, Bash, Flask, Docker</p>
+                    <div class="skill-card slide-up">
+                        <h3>Data Engineering</h3>
+                        <p>Python, R, SQL, Bash, Flask, Docker</p>
+                    </div>
                 </div>
             </div>
         </div>
     </section>
 
-    <!-- Projects Section -->
-    <section id="projects" class="projects-section py-5">
+    <!-- Data Analytis Projects Section-->
+    <section id="Data Analytis Projects" class="projects-section py-5">
         <div class="container text-center">
-            <h2>Projects</h2>
+            <h2>Data Analytis Projects</h2>
             <div class="row">
                 <div class="col-md-4">
-                    <div class="card">
+                    <div class="card project-card hover-up">
                         <img src="img/project1.png" class="card-img-top" alt="Project 1">
                         <div class="card-body">
                             <h5 class="card-title">Project 1: Loan Approval Prediction</h5>
@@ -88,7 +98,7 @@
                     </div>
                 </div>
                 <div class="col-md-4">
-                    <div class="card">
+                    <div class="card project-card hover-up">
                         <img src="img/project2.png" class="card-img-top" alt="Project 2">
                         <div class="card-body">
                             <h5 class="card-title">Project 2: Customer Churn Analysis</h5>
@@ -98,7 +108,85 @@
                     </div>
                 </div>
                 <div class="col-md-4">
-                    <div class="card">
+                    <div class="card project-card hover-up">
+                        <img src="img/project3.png" class="card-img-top" alt="Project 3">
+                        <div class="card-body">
+                            <h5 class="card-title">Project 3: Sentiment Analysis</h5>
+                            <p class="card-text">A natural language processing project to analyze customer sentiment from reviews.</p>
+                            <a href="#" class="btn btn-primary">View Project</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Machine Learning Projects -->
+    <section id="Machine Learning Projects" class="projects-section py-5">
+        <div class="container text-center">
+            <h2>Machine Learning Projects</h2>
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="card project-card hover-up">
+                        <img src="img/project1.png" class="card-img-top" alt="Project 1">
+                        <div class="card-body">
+                            <h5 class="card-title">Project 1: Loan Approval Prediction</h5>
+                            <p class="card-text">A machine learning model that predicts loan approvals based on applicant data.</p>
+                            <a href="#" class="btn btn-primary">View Project</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="card project-card hover-up">
+                        <img src="img/project2.png" class="card-img-top" alt="Project 2">
+                        <div class="card-body">
+                            <h5 class="card-title">Project 2: Customer Churn Analysis</h5>
+                            <p class="card-text">Analyzing customer behavior to predict churn and develop retention strategies.</p>
+                            <a href="#" class="btn btn-primary">View Project</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="card project-card hover-up">
+                        <img src="img/project3.png" class="card-img-top" alt="Project 3">
+                        <div class="card-body">
+                            <h5 class="card-title">Project 3: Sentiment Analysis</h5>
+                            <p class="card-text">A natural language processing project to analyze customer sentiment from reviews.</p>
+                            <a href="#" class="btn btn-primary">View Project</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Data Engineering Projects -->
+    <section id="Data Engineering Projects" class="projects-section py-5">
+        <div class="container text-center">
+            <h2>Data Engineering Projects</h2>
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="card project-card hover-up">
+                        <img src="img/project1.png" class="card-img-top" alt="Project 1">
+                        <div class="card-body">
+                            <h5 class="card-title">Project 1: Loan Approval Prediction</h5>
+                            <p class="card-text">A machine learning model that predicts loan approvals based on applicant data.</p>
+                            <a href="#" class="btn btn-primary">View Project</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="card project-card hover-up">
+                        <img src="img/project2.png" class="card-img-top" alt="Project 2">
+                        <div class="card-body">
+                            <h5 class="card-title">Project 2: Customer Churn Analysis</h5>
+                            <p class="card-text">Analyzing customer behavior to predict churn and develop retention strategies.</p>
+                            <a href="#" class="btn btn-primary">View Project</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="card project-card hover-up">
                         <img src="img/project3.png" class="card-img-top" alt="Project 3">
                         <div class="card-body">
                             <h5 class="card-title">Project 3: Sentiment Analysis</h5>
@@ -112,11 +200,11 @@
     </section>
 
     <!-- Contact Section -->
-    <section id="contact" class="contact-section py-5 bg-light">
+    <section id="contact" class="contact-section py-5 bg-dark text-white">
         <div class="container text-center">
             <h2>Contact</h2>
-            <p>Email: <a href="mailto:mwangestanley02@gmail.com">mwangestanley02@gmail.com</a></p>
-            <p>LinkedIn: <a href="https://www.linkedin.com/in/stanley-mwange/">linkedin.com/in/stanley-mwange</a></p>
+            <p>Email: <a href="mailto:mwangestanley02@gmail.com" class="text-info">mwangestanley02@gmail.com</a></p>
+            <p>LinkedIn: <a href="https://www.linkedin.com/in/stanley-mwange/" class="text-info">linkedin.com/in/stanley-mwange</a></p>
         </div>
     </section>
 
@@ -125,6 +213,23 @@
         <p>&copy; 2024 Stanley Mwange. All Rights Reserved.</p>
     </footer>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script>
+        document.addEventListener("DOMContentLoaded", function () {
+            const particlesContainer = document.createElement('div');
+            particlesContainer.className = 'particles';
+            document.body.appendChild(particlesContainer);
+
+            // Create and animate particles
+            for (let i = 0; i < 100; i++) {
+                const particle = document.createElement('div');
+                particle.className = 'particle';
+                particle.style.top = `${Math.random() * 100}vh`;
+                particle.style.left = `${Math.random() * 100}vw`;
+                particle.style.animationDuration = `${Math.random() * 8 + 4}s`;
+                particle.style.animationDelay = `${Math.random() * 4}s`;
+                particlesContainer.appendChild(particle);
+            }
+        });
+    </script>
 </body>
 </html>
